NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Allocation__c/CONTAINER_Stock_Allocation__c.object-meta.xml
<CustomObject>
    <description>Container stock allocation</description>
    <label>Stock Allocation</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Stock Allocation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Allocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>