NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Allocation__c/fields/CONTAINER_End_Customer_Job__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_End_Customer_Job__c</fullName>
    <description>Container end customer job number</description>
    <label>End Customer Job #</label>
    <length>48</length>
    <type>Text</type>
</CustomField>