NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Allocation__c/fields/CONTAINER_Product__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Product__c</fullName>
    <description>Container Product</description>
    <label>Product</label>
    <length>48</length>
    <type>Text</type>
</CustomField>