NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Allocation__c/fields/CONTAINER_Qty__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Qty__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>