NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Allocation__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Stock Allocation</relationshipLabel>
    <relationshipName>Stock_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>